...
        android:layout_height="481dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/contentListaMedios"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnModificar"
        app:layout_constraintEnd_toStartOf="@+id/recyclerViewTemas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediosSeleccionados"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
...
